@@ -1,3 +1,4 @@
+ - Don't use drand48() (not portable)
  - Don't use strcasecmp() (not portable)
  - Remove sysinfo.h and class System (not portable)
  - Don't include <unistd.h>, <sys/utsname.h> (not portable)
